# bugbounty-brain

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  pyproject.toml  sources.json
.github/workflows/: auto-release.yml  ci.yml  collect.yml  release.yml
knowledge/: cards.jsonl
src/bugbounty_brain/: __init__.py  cli.py  collector.py  compiler.py  enricher.py  health.py  validator.py
tests/: test_cli.py  test_collector.py  test_compiler.py  test_enricher.py  test_health.py  test_validator.py
