[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbounty-brain"
version = "0.1.0"
description = "Build a validated, searchable security knowledge artifact."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "TrueNix" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/TrueNix/bugbounty-brain"
Repository = "https://github.com/TrueNix/bugbounty-brain"
Issues = "https://github.com/TrueNix/bugbounty-brain/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.11",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
bugbounty-brain = "bugbounty_brain.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "C4", "PIE", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src/bugbounty_brain"]
show_error_codes = true
pretty = true
warn_unreachable = true
